# Argus

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  setup_deps.sh
.github/workflows/: ci.yml
apps/router_core/: mix.exs
apps/router_core/lib/: config.ex  envelope.ex  metrics.ex  pipeline.ex  router_core.ex  supervisor.ex  transforms.ex
apps/router_core/lib/ipc/: protocol.ex  rust_host.ex
apps/router_core/lib/transforms/: add_fields.ex  identity.ex
apps/router_core/test/: config_test.exs  envelope_test.exs  pipeline_test.exs  protocol_test.exs  test_helper.exs
configs/examples/: kafka_to_log.yaml  mqtt_to_kafka.yaml
crates/connector_host/: Cargo.toml
crates/connector_host/src/: config.rs  envelope.rs  main.rs  protocol.rs
crates/connector_host/src/connectors/: kafka.rs  mod.rs
crates/connector_host/src/sinks/: log.rs  mod.rs
docs/: ARCHITECTURE.md  CONFIG.md  RUNBOOK.md
tools/demo_consumers/: consume_kafka.sh
tools/demo_producers/: publish_kafka.sh
