[package]
name = "connector_host"
version = "0.1.0"
edition = "2021"
description = "Argus connector host — Kafka consumer/producer and log sink over stdio IPC"

[[bin]]
name = "connector_host"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
rskafka = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.7", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
